; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_lapic_native.c_lapic_set_perfcnt_interrupt_mask.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/i386/extr_lapic_native.c_lapic_set_perfcnt_interrupt_mask.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LAPIC_LVT_MASKED = common dso_local global i32 0, align 4
@LVT_PERFCNT = common dso_local global i32 0, align 4
@PERFCNT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lapic_set_perfcnt_interrupt_mask(i64 %0) #0 {
  %2 = alloca i64, align 8
  %3 = alloca i32, align 4
  store i64 %0, i64* %2, align 8
  %4 = load i64, i64* %2, align 8
  %5 = icmp ne i64 %4, 0
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @LAPIC_LVT_MASKED, align 4
  br label %9

8:                                                ; preds = %1
  br label %9

9:                                                ; preds = %8, %6
  %10 = phi i32 [ %7, %6 ], [ 0, %8 ]
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* @LVT_PERFCNT, align 4
  %12 = load i32, i32* @PERFCNT, align 4
  %13 = call i32 @LAPIC_VECTOR(i32 %12)
  %14 = load i32, i32* %3, align 4
  %15 = or i32 %13, %14
  %16 = call i32 @LAPIC_WRITE(i32 %11, i32 %15)
  ret void
}

declare dso_local i32 @LAPIC_WRITE(i32, i32) #1

declare dso_local i32 @LAPIC_VECTOR(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
